# mlops-cmapss-pipeline

./: .dockerignore  .env.example  .gitignore  README.md  dagster.yaml  docker-compose.yml  pyproject.toml  requirements.txt  workspace.yaml
.github/workflow/: ci.yml
.github/workflows/: ci.yml
dockerfiles/: dagster.Dockerfile  dagster_user_code.Dockerfile  mlflow.Dockerfile
src/cmapss_pipeline/: config.py  definitions.py
src/cmapss_pipeline/assets/: data.py  drift.py  model.py
src/cmapss_pipeline/resources/: evidentlyai_resource.py  mlflow_resource.py
src/cmapss_pipeline/schedules/: drift.py  retrain.py
tests/unit/: test_data.py
