[project]
name = "mlops-cmapss-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.43.5",
    "dagster>=1.13.3",
    "dagster-docker>=0.29.3",
    "dagster-postgres>=0.29.3",
    "dagster-webserver>=1.13.3",
    "evidently>=0.7.21",
    "matplotlib>=3.10.9",
    "mlflow>=3.12.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
]

[tool.dagster]
module_name="src.cmapss_pipeline.definitions"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
